Remove redundant timestamp on note details page

--- a/src/components/note/Note.astro
+++ b/src/components/note/Note.astro
@@ -84,10 +84,14 @@ const coverImage = note.data.coverImage ? await getImage({ src: note.data.coverI
 			) : null
 		}
 	</div>
-	<div class="mt-3">
-		<Icon aria-hidden="true" class="inline" focusable="false" name="mdi:calendar" />
-		<a class="cactus-link" href={`/notes/${note.id}/`}>
-			<FormattedDate date={note.data.publishDate} />
-		</a>
-	</div>
+	{
+		isPreview ? (
+			<div class="mt-3">
+				<Icon aria-hidden="true" class="inline" focusable="false" name="mdi:calendar" />
+				<a class="cactus-link" href={`/notes/${note.id}/`}>
+					<FormattedDate date={note.data.publishDate} />
+				</a>
+			</div>
+		) : null
+	}
 </article>
