--- a/src/components/bookmark/Bookmark.astro
+++ b/src/components/bookmark/Bookmark.astro
@@ -34,6 +34,7 @@ const { Content } = await render(bookmark);
 		!isPreview && (
 			<div class="mb-2 flex flex-wrap items-center gap-2 text-sm">
 				<FormattedDate
+					className="bookmark-date"
 					dateTimeOptions={{
 						hour: "2-digit",
 						minute: "2-digit",
