--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -17,7 +17,12 @@ const { as: Tag = "div", post, withDesc = false } = Astro.props;
 />
 <Tag>
 	{post.data.draft && <span class="text-red-500">(Draft) </span>}
-	<a class="cactus-link" data-astro-prefetch href={`/posts/${post.id}/`}>
+	<a
+		class="cactus-link"
+		data-astro-prefetch
+		href={`/posts/${post.id}/`}
+		title={post.data.description}
+	>
 		{post.data.title}
 	</a>
 </Tag>
